fix issue in firefox where input breaks out of box in midsize (#2385)

--- a/apps/site/assets/css/_trip-plan-form.scss
+++ b/apps/site/assets/css/_trip-plan-form.scss
@@ -27,6 +27,10 @@
   width: 100%;
 }
 
+.m-trip-plan__location-input {
+  width: 80%;
+}
+
 .plan-date-container {
   background: $white;
   border: $border;
